# AI-ERP-Copilot

./: CHANGELOG.md
.github/workflows/: backend-ci.yml
Backend code repository shared/: .thumbnail  Risk Copilot.dc.html  Signature Explorations.dc.html
Backend code repository shared/uploads/: DESIGN_BRIEF_Phase3_UI.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: imports.py  mappings.py  risk.py  sources.py  students.py
backend/app/core/: audit.py  config.py  security.py  storage.py
backend/app/models/: __init__.py  base.py  canonical.py  identity.py  ingestion.py  risk.py
backend/app/repositories/: risk_repository.py
backend/app/schemas/: imports.py  risk.py
backend/app/services/: auth_service.py
backend/app/services/ingestion/: mapping.py  parsing.py  pipeline.py
backend/app/services/ingestion/cleaning/: normalizers.py
backend/app/services/ingestion/connectors/: csv_excel.py
backend/app/services/ingestion/loading/: canonical_loader.py
backend/app/services/ingestion/reconciliation/: completeness.py
backend/app/services/ingestion/resolution/: resolver.py
backend/app/services/risk/: alerts.py  engine.py  scoping.py
backend/app/services/risk/signals/: academic.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_health_and_auth.py  test_ingestion_pipeline.py  test_resolver.py  test_risk_api.py  test_risk_engine.py  test_risk_interventions.py  test_risk_scoring.py  test_risk_signals.py  test_rls_isolation.py
frontend/: package-lock.json  package.json
(+7 files in other folders)
