[project]
name = "ai-college-copilot-backend"
version = "0.1.0"
description = "AI College Copilot — backend (Phase 0/1: foundation + unified data ingestion)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg[binary]==3.2.3",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "pyjwt==2.10.1",
    "argon2-cffi==23.1.0",
    "python-multipart==0.0.18",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "testcontainers[postgres]==4.9.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
